--- a/DisasterShield/package.json
+++ b/DisasterShield/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-geolocated": "^4.1.2",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.25.1",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
