--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 venv/
 DisasterShieldBackend/db.sqlite3
 DisasterShieldBackend/DisasterShieldBackend/__pycache__/
+DisasterShieldBackend/DisasterShield/__pycache__/
