--- a/DisasterShield/package.json
+++ b/DisasterShield/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
